# Search_engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  convertjson.cpp  convertjson.h  engine.cpp  invertedindex.cpp  invertedindex.h  requests.json  searchserver.cpp  searchserver.h
googletest/: CMakeLists.txt  gtest.cpp
include/: convertjson.h  invertedindex.h  searchserver.h
resources/: file001  file003
src/: CMakeLists.txt  convertjson.cpp  engine.cpp  gtest.cpp  invertedindex.cpp  searchserver.cpp
tests/: CMakeLists.txt  answers.json  config.json  convertjson_test.cpp  invertedindex_test.cpp  searchserver_test.cpp
